[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/SoundManager/SoundManager.gd" type="Script" id=1]
[ext_resource path="res://assets/Music/GamePlayMusic.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/Music/EndingMusic.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Music/TitleScreenMusic.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/SoundEffects/Dash.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/SoundEffects/Logo.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/SoundEffects/Death.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/SoundEffects/LevelComplete.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/SoundEffects/Jump.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/SoundEffects/Land.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/SoundEffects/Attack.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/SoundEffects/ButtonSounds.wav" type="AudioStream" id=12]

[node name="SoundManager" type="Node2D"]
script = ExtResource( 1 )

[node name="Music" type="Node2D" parent="."]

[node name="TitleScreenMusic" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="GameMusic" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="EndingMusic" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="SoundEffects" type="Node2D" parent="."]

[node name="AttackSound" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 11 )

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 12 )

[node name="DashSound" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="JumpSound" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="LandSound" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 10 )
volume_db = -10.0

[node name="LevelCompleteSound" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 8 )

[node name="LogoSound" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 6 )
